# personal-fitness

./: .gitignore  README.md
server/: personal-fitness.cabal
server/app/: Main.hs
server/src/: Domain.hs  Server.hs
